ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-app
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-default
spec:
  tls:
  - hosts:
    - myapp.loremipsum.com
    secretName: my-app
  rules:
  - host: myapp.loremipsum.com
    http:
      paths:
      - backend:
          serviceName: my-app
          servicePort: 80
